welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:8: error: value &&! is not a member of Boolean
  if (!(a==b)&&!(a==c)){
             ^